# basil-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dump.sql  env-example
backend/src/: handlers.rs  main.rs  models.rs  todoist.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: manifest.json  template.html
frontend/src/components/: app.js
frontend/src/components/header/: index.js  style.css
frontend/src/routes/home/: index.js  style.css
frontend/src/style/: index.css
src/: handlers.rs  main.rs  models.rs  routes.rs  sql.rs  templates.rs  todoist.rs
