[package]
name = "basil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["form"] }
dotenvy = "0.15.6"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
